# Applied_AI_Midterm_SRGAN

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
notebooks/: 00_colab_setup.ipynb  01_data_preparation.ipynb  02_model_a_transfer_learning.ipynb  03_srgan_training.ipynb  04_generate_srgan_training_images.ipynb  05_model_b_transfer_learning.ipynb  06_final_comparison.ipynb  Applied_AI_Midterm_SRgan_Complete.ipynb
scripts/: generate_srgan_training_images.py  prepare_data.py
src/applied_ai_midterm/: __init__.py  config.py  data.py  generation.py  transforms.py
src/applied_ai_midterm/data/: __init__.py
src/applied_ai_midterm/evaluation/: __init__.py  comparison.py  metrics.py
src/applied_ai_midterm/models/: __init__.py  classifier.py  srgan.py
src/applied_ai_midterm/training/: __init__.py  classifier.py  srgan.py
src/applied_ai_midterm/visualization/: __init__.py  srgan.py
tests/: test_classifier.py  test_config.py  test_data.py  test_generation.py  test_model_comparison.py  test_srgan.py
