[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "applied-ai-midterm"
version = "0.1.0"
description = "Reproducible PyTorch comparison of original-image and SRGAN-image classifiers"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.2",
    "Pillow>=10.4",
    "PyYAML>=6.0.2",
    "scikit-learn>=1.5",
    "torch>=2.5",
    "torchvision>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--basetemp=.pytest-tmp", "-p", "no:cacheprovider"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

